@@ -117,7 +117,7 @@ def float_format(column, cell_renderer, tree_model, iterator, user_data):
     return
 
 def percent_format(column, cell_renderer, tree_model, iterator, user_data):
-    number = tree_model.get_value(iterator, user_data)
+    number = tree_model.get_value(iterator, user_data)*100
     cell_renderer.set_property('text', get_string_from_float(number) + '%')
     return
 
@@ -146,7 +146,7 @@ def float_to_red_green_string(column, cell, model, iterator, user_data):
     cell.set_property('markup', get_green_red_string(num, text))
 
 def float_to_red_green_string_percent(column, cell, model, iterator, user_data):
-    num = model.get_value(iterator, user_data)
+    num = model.get_value(iterator, user_data) *100.0
     text = get_string_from_float(num) + '%'
     cell.set_property('markup', get_green_red_string(num, text))
 
